--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.2"
+    "mongoose": "^8.18.2",
+    "stripe": "^19.1.0"
   },
   "name": "digital-wallet-server",
   "version": "1.0.0",
