--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
+    "socket.io": "^4.8.1",
     "stripe": "^19.1.0"
   },
   "name": "digital-wallet-server",
